@@ -21,11 +21,23 @@
 
 #define DEFAULT_DEBUG_LEVEL 0
 
-#define debug(level,fmt,rest...) debug_int(__FILE__,__LINE__,__FUNCTION__,level,fmt,##rest)
+#define debug(level,fmt,rest...) \
+  if( level <= get_debug_level() ) \
+    debug_int(__FILE__,__LINE__,__FUNCTION__,level,fmt,##rest)
+
+#define xqf_informal(fmt,rest...) \
+  debug_int(__FILE__,__LINE__,__FUNCTION__,-1,fmt,##rest)
+
+#define xqf_warning(fmt,rest...) \
+  debug_int(__FILE__,__LINE__,__FUNCTION__,-2,fmt,##rest)
+
+#define xqf_error(fmt,rest...) \
+  debug_int(__FILE__,__LINE__,__FUNCTION__,-3,fmt,##rest)
+
 void debug_int(const char* file, int line, const char* function, int level, const char* fmt, ...);
 void debug_cmd(int, char *[], char *, ...);
 void set_debug_level (int);
-int get_debug_level (void);
+inline int get_debug_level (void);
 
 int debug_increase_indent();
 int debug_decrease_indent();
